# memory-rd-strategy-agent

./: .env.example  .gitignore  AGNETS.md  PROJECT_PLAN.md  PROJECT_PLAN_REV.md  README.md  app.py  main.py  pyproject.toml  scope.yaml
agents/: academic_search.py  analysis.py  embeddings.py  evidence_index.py  quality_review.py  report.py  retrieve.py  state.py  supervisor.py  web_search.py
docs/: to_solve.md
eval/: evaluate.py  golden_queries.json  golden_queries.yaml  run_eval.py
outputs/: report_2026-04-10.md
src/rd_strategy_agent/: __init__.py  main.py  state.py  supervisor.py
src/rd_strategy_agent/agents/: analysis.py  quality_review.py  report.py  retrieve.py  scope.py  websearch.py
src/rd_strategy_agent/utils/: sc_checker.py
tests/: test_sc_checker.py
