[project]
name = "memory-rd-strategy-agent"
version = "0.1.0"
description = "Semiconductor R&D Intelligence Agent"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.6.0",
    "faiss-cpu>=1.9.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "exa-py>=2.0.0",
    "pyalex>=0.16",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]
